--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,28 +1,35 @@
-<div class='qd-header'>
-    <img src='./assets/FedEx-Logo.png' alt="logo" class='fed-logo pull-left' />
- </div>
-  <div class="login">
-    <h2 class="login-header">Login</h2>
-    <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
-  
-      <p [ngClass]="{ 'has-error': isSubmitted && formControls.userName.errors }">
-        <input type="text" placeholder="Username" formControlName="userName">
-      </p>
-  
-      <div *ngIf="isSubmitted && formControls.userName.errors" class="help-block">
-        <div *ngIf="formControls.userName.errors.required">Username is required</div>
+<div class="qd-header">
+  <img src="./assets/FedEx-Logo.png" alt="logo" class="fed-logo pull-left" />
+</div>
+<div class="login">
+  <h2 class="login-header">Login</h2>
+  <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
+    <p [ngClass]="{ 'has-error': isSubmitted && formControls.userName.errors }">
+      <input type="text" placeholder="Username" formControlName="userName" />
+    </p>
+
+    <div *ngIf="isSubmitted && formControls.userName.errors" class="help-block">
+      <div *ngIf="formControls.userName.errors.required">
+        Username is required
       </div>
-  
-      <p [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
-        <input type="password" placeholder="Password" formControlName="password">
-      </p>
-  
-      <div *ngIf="isSubmitted && formControls.password.errors" class="help-block">
-        <div *ngIf="formControls.password.errors.required">Password is required</div>
+    </div>
+
+    <p [ngClass]="{ 'has-error': isSubmitted && formControls.password.errors }">
+      <input
+        type="password"
+        placeholder="Password"
+        formControlName="password"
+      />
+    </p>
+
+    <div *ngIf="isSubmitted && formControls.password.errors" class="help-block">
+      <div *ngIf="formControls.password.errors.required">
+        Password is required
       </div>
-  
-      <p>
-        <input type="submit" value="Login">
-      </p>
-    </form>
-  </div>
+    </div>
+
+    <p>
+      <input type="submit" value="Login" />
+    </p>
+  </form>
+</div>
