--- a/src/app/components/user-details/user-details.component.scss
+++ b/src/app/components/user-details/user-details.component.scss
@@ -1,27 +1,28 @@
-.qd-header{
-    height: 75px;
-    background: #4d148c;}
+.qd-header {
+  height: 75px;
+  background: #4d148c;
+}
 
-.fed-logo{
+.fed-logo {
   height: 45px;
-   margin-left: 20px;
-    margin-top: 16px;
+  margin-left: 20px;
+  margin-top: 16px;
 }
-.dash-pic{
-    padding: 13px;
-    font-family: Roboto-Regular, sans-serif ;
-    font-size: 14px;
-    color: #FFFFFF;
-    letter-spacing: 0;
-    line-height: 14px;
-    cursor: pointer;
-    width: 50px;
-    height: 50px;
-    float: right;
+.dash-pic {
+  padding: 13px;
+  font-family: Roboto-Regular, sans-serif;
+  font-size: 14px;
+  color: #ffffff;
+  letter-spacing: 0;
+  line-height: 14px;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  float: right;
 }
-.names{
-color: #FFFFFF;
-padding: 20px;
-margin-top: 13px;
-float: right;
+.names {
+  color: #ffffff;
+  padding: 20px;
+  margin-top: 13px;
+  float: right;
 }
